back-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: munji-back
  name: munji-back
spec:
  replicas: 3
  selector:
    matchLabels:
      app: munji-back
  template:
    metadata:
      labels:
        app: munji-back
    spec:
      containers:
      - env:
        - name: HIBERNATE_DDL_AUTO
          valueFrom:
            configMapKeyRef:
              name: munji-cm
              key: HIBERNATE_DDL_AUTO
        - name: SPRING_DATASOURCE_URL
          valueFrom:
            configMapKeyRef:
              name: munji-cm
              key: SPRING_DATASOURCE_URL
        - name: SPRING_DATASOURCE_USERNAME
          valueFrom:
            configMapKeyRef:
              name: munji-cm
              key: SPRING_DATASOURCE_USERNAME
        - name: SPRING_DATASOURCE_PASSWORD
          valueFrom:
            secretKeyRef:
              name: munji-secret
              key: SPRING_DATASOURCE_PASSWORD
        image: oeckikekk/munjigoorm-back:3adc93404954236e29d47af49d4e851341941731
        name: munji-back
        ports:
        - containerPort: 8080
          name: munji-back
      restartPolicy: Always
