db-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: munji-db
  labels:
    app: munji-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: munji-db
  template:
    metadata:
      labels:
        app: munji-db
    spec:
      nodeSelector:
        kubernetes.io/hostname: ip-192-168-42-112.ap-northeast-2.compute.internal
      containers:
      - env:
        - name: MYSQL_DATABASE
          valueFrom:
            configMapKeyRef:
              name: munji-cm
              key: MYSQL_DATABASE
        - name: MYSQL_ROOT_PASSWORD
          valueFrom:
            secretKeyRef:
              name: munji-secret
              key: MYSQL_ROOT_PASSWORD
        image: ksee1230/db:1.0
        name: munji-db
        ports:
        - containerPort: 3306
          name: munji-db
#        volumeMounts:
#        - name: db-storage
#          mountPath: /var/lib/mysql
      restartPolicy: Always
#      volumes:
#        - name: db-storage
#          persistentVolumeClaim:
#            claimName: munji-pvc
