py-day-init.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: py-day
  name: py-day
  namespace: munji
spec:
  containers:
  - image: 320451040304.dkr.ecr.ap-northeast-2.amazonaws.com/munji-database-day:a0285769d665f547ea6d11e615c4f62a3343ca9b
    name: py-day
  restartPolicy: OnFailure
