py-day.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: py-day
  name: py-day
spec:
  containers:
  - image: ksee1230/py:day
    name: py-day
