py-once.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: py-once
  name: py-once
spec:
  containers:
  - image: ksee1230/py:once
    name: py-once
