back-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: munji-back
  name: munji-back
spec:
  type: ClusterIP
  ports:
  - port: 8080
  selector:
    app: munji-back
