db-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: munji-db
  name: munji-db
spec:
  type: ClusterIP
  ports:
  - port: 3306
  selector:
    app: munji-db
