front-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: munji-front
  name: munji-front
spec:
  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 31234
    protocol: TCP
  selector:
    app: munji-front
  type: NodePort
