ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: munji-ingress
  namespace: munji
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    ingressclass.kubernetes.io/is-default-class: "true"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  tls:
  - secretName: nrson-tls
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: munji-front
                port:
                  number: 3000
